[gd_scene load_steps=3 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 10 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="LandingJumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="WallClingTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
